tests/errors/operators-invalid-suffix.ari
fn main() -> i64 {
  let value = 1usize;
  return value;
}
